﻿===== Hasor-Core v0.0.9
* 新增:
    01.新增 Spring 作为Hasor 的 Bean 容器支持（暂不支持 Hasor Aop）。
* 改进:
    01.优化 AppContext 接口实现类的层次关系。
    02.AppContext,不再支持 addModule 这种形式添加模块，改为通过 start 方法传入。

===== Hasor-Core v0.0.8
* 新增:
    01.确立类型绑定机制。
    02.确立Bean机制。
    03.内置Aop接口，不再直接依赖Aop联盟的包。
    04.支持Scope。
    05.支持Provider。
    06.AopMatchers类型新增subClassesOf方法。匹配给定类型的子类（或实现了的接口），迁移至Hasor-Quick项目。
* 改进:
    01.Settings接口的 getNameSpace 方法改名为 getSetting。
    02.AppContext接口的 findBean、findProvider 方法更名 findBindingBean、findBindingProvider
        --使其接近ApiBinder接口中bindingType方法的命名以便于开发者理解。
    03.所有Plugins都移动到Hasor-Quick项目中。
    04.将Hasor中start、stop生命周期，相关的支持全部删除，不再支持插件生命周期。
    05.所有主要接口50%以上进行改进，改进的目的是不再强制依赖Guice。
    06.添加Provider接口、EventContext接口。
    07.删除ModulePropxy类、删除启动依赖检查功能。
    08.瘦身（去掉JSON包、Ognl包、其它一些工具包）。

===== Hasor-Core v0.0.7
* 修复:
    01.修复 AbstractAppContext 类处理 AppContextAware 接口方面的代码。
        --当类扫描器扫描不到 AppContextAware 接口实现类时能引发整个doStart阶段的退出。
    02.修复当使用 @Listener 注解注册容器事件时，导致ContextEvent_Initialized、ContextEvent_Started 两个事件无法正确调用的问题。
    03.修复当配置文件中，根节点下第一层节点名称如果与根节点同名，导致的数据混乱问题。
    04.修复 new AnnoStandardAppContext() 引发的Bug。
    05.修复 FileEnvironment 在创建 FileSettings 时候导致重复加载配置文件的问题。
* 新增:
    01.Settings 通过映射 key "." 可以取得根节点。
    02.新增 @GlobalAop 配置全局拦截器。
    03.新增 PluginHelper 工具类，可以将一个插件转换成为 Hasor 的 Module。
    04.Settings 接口新增可以设置新值的功能。
    05.Environment 接口新增可以设置包扫描范围的方法。
    06.AbstractAppContext 类新增 addGuiceModule 方法可以直接将 Guice 模块加入到 Hasor 中。
* 改进:
    01.Settings接口的 getNameSpace 方法改名为 getSetting。
    02.改造 Hasor 的类扫描机制，从 Class.forName 改为字节码解析（性能上仍需要进一步优化）。
    03.部分接口方法名称更换。
    04.修改 Cache 接口的 clean 方法名为 cleanCache，以避免和 Map 接口冲突。
    05.GlobalProperty接口更名为FieldProperty

===== Hasor-Core v0.0.6
* 修复:
    01.改进 当使用 JSON 将（List、Map、基本类型）类之外的类型尝试序列化时会得到一个异常。修复这个问题，当遇到这种情况工具将使用 JSONPojoConvertor 对其进行序列化。
* 新增:
    01.新增在注册 ServicesRegisterHandler 时使用 Class 类型。注册的 Handler 支持 依赖注入。