@@ -25,8 +25,6 @@ public interface AppContext extends EventContext {
     /**获取 {@link net.hasor.core.Environment#getContext()} 环境接口中所表示的上下文。
      * @see net.hasor.core.Environment*/
     public Object getContext();
-    /**获取父层级。*/
-    public AppContext getParent();
     /**获取应用程序配置。
      * <li>该方法可以在任何时候被使用，不需要考虑容器状态 {@link AppContext#isStart()} </li>
      * <li>该方法相当于 {@link Environment#getSettings()}</li>
