@@ -26,7 +26,6 @@ import net.hasor.core.Environment;
 import net.hasor.core.Hasor;
 import net.hasor.core.Module;
 import net.hasor.core.XmlNode;
-import net.hasor.core.context.adapter.RegisterFactory;
 import net.hasor.core.context.factorys.DefaultRegisterFactoryCreater;
 import net.hasor.core.environment.StandardEnvironment;
 import org.more.util.ClassUtils;
@@ -69,12 +68,10 @@ public abstract class AbstractResourceAppContext extends AbstractAppContext {
     public final URI getMainSettings() {
         return this.mainSettings;
     }
-    @Override
     public AbstractAppContext getParent() {
         return this.parent;
     }
     /**获取环境接口。*/
-    @Override
     public Environment getEnvironment() {
         if (this.environment == null) {
             this.environment = this.createEnvironment();
@@ -86,7 +83,6 @@ public abstract class AbstractResourceAppContext extends AbstractAppContext {
         return new StandardEnvironment(this.mainSettings);
     }
     //
-    @Override
     protected void doInitialize() {
         //1.预先加载Module
         Environment env = this.getEnvironment();
@@ -115,27 +111,26 @@ public abstract class AbstractResourceAppContext extends AbstractAppContext {
     }
     //
     //
-    private Provider<RegisterFactory> registerFactoryProvider = null;
+    private Provider<BindInfoFactory> factoryProvider = null;
     /**设置一个RegisterFactory实例对象*/
-    protected void setRegisterFactory(final Provider<RegisterFactory> registerFactoryProvider) {
+    protected void setBindInfoFactory(final Provider<BindInfoFactory> factoryProvider) {
         if (this.isStart() == true) {
             throw new IllegalStateException("context is started.");
         }
-        this.registerFactoryProvider = registerFactoryProvider;
+        this.factoryProvider = factoryProvider;
     }
     /**设置一个RegisterFactory实例对象*/
-    protected void setRegisterFactory(final RegisterFactory registerFactory) {
+    protected void setBindInfoFactory(final BindInfoFactory bindInfoFactory) {
         if (this.isStart() == true) {
             throw new IllegalStateException("context is started.");
         }
         //
-        if (registerFactory == null) {
-            this.registerFactoryProvider = null;
+        if (bindInfoFactory == null) {
+            this.factoryProvider = null;
         } else {
-            this.registerFactoryProvider = new AbstractRegisterFactoryProvider() {
-                @Override
+            this.factoryProvider = new AbstractRegisterFactoryProvider() {
                 protected BindInfoFactory getBindInfoFactory() {
-                    return registerFactory;
+                    return bindInfoFactory;
                 }
             };
         }
@@ -147,28 +142,25 @@ public abstract class AbstractResourceAppContext extends AbstractAppContext {
         }
         //
         if (registerFactoryCreate == null) {
-            this.registerFactoryProvider = null;
+            this.factoryProvider = null;
         } else {
-            this.registerFactoryProvider = new AbstractRegisterFactoryProvider() {
-                @Override
+            this.factoryProvider = new AbstractRegisterFactoryProvider() {
                 protected BindInfoFactory getBindInfoFactory() {
                     return registerFactoryCreate.create(AbstractResourceAppContext.this.getEnvironment());
                 }
             };
         }
     }
-    @Override
     protected BindInfoFactory getBindInfoFactory() {
         //
-        if (this.registerFactoryProvider == null) {
-            this.registerFactoryProvider = new AbstractRegisterFactoryProvider() {
-                @Override
+        if (this.factoryProvider == null) {
+            this.factoryProvider = new AbstractRegisterFactoryProvider() {
                 protected BindInfoFactory getBindInfoFactory() {
                     return new DefaultRegisterFactoryCreater().create(AbstractResourceAppContext.this.getEnvironment());
                 }
             };
         }
-        RegisterFactory factory = this.registerFactoryProvider.get();
+        BindInfoFactory factory = this.factoryProvider.get();
         if (factory == null) {
             throw new NullPointerException("registerFactory is null.");
         }
@@ -176,7 +168,6 @@ public abstract class AbstractResourceAppContext extends AbstractAppContext {
     }
     private static abstract class AbstractRegisterFactoryProvider implements Provider<BindInfoFactory> {
         private BindInfoFactory bindInfoFactory = null;
-        @Override
         public BindInfoFactory get() {
             if (this.bindInfoFactory == null) {
                 this.bindInfoFactory = this.getBindInfoFactory();
